add: user register by email or phone
